// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Space /> margin renders child component with Margin. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 gCvvOI"
  >
    Flex Item
  </div>
</div>
`;

exports[`<Space /> padding renders child component with Padding. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 csgBMA"
  >
    Flex Item
  </div>
</div>
`;
